crates/nirvash-macros/tests/fixtures/derive_signature_legacy_attrs.rs
use nirvash_macros::Signature;

#[derive(Clone, Debug, PartialEq, Eq, Signature)]
#[signature(domain_fn = "State::representatives", invariant_fn = "State::signature_invariant")]
struct State {
    ready: bool,
}

fn main() {}
